# Traffic-Sign-Recognition

./: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  pyproject.toml
.dvc/: config
configs/infer/: infer.yaml
configs/train/: train.yaml
scripts/: __init__.py  dvc_utils.py  export_to_onnx.py  infer.py  preprocess.py  train.py
